# kiss-

./: .gitignore  ADAPTIVE_UI.md  ANALYSE_COMPLETE.md  ANALYSE_FONCTIONNALITES.md  BACKEND_STATUS.md  BUGS_FIXED.md  BUILD_GUIDE.md  CALLS_ARCHITECTURE.md  CALLS_IMPLEMENTATION.md  CORRECTIONS_APPLIQUEES.md  CORRECTIONS_BUGS.md  DEPLOYMENT_GUIDE.md  INTEGRATION_COMPLETE.md  INTEGRATION_FLUTTER.md  QUICK_START_CALLS.md  RAPPORT_FINAL.md  README.md  RESUME_ANALYSE.md  RESUME_FINAL.md  TEST_CALLS.md  docker-compose.yml  nginx.conf  pubspec.yaml
android/app/: build.gradle.kts
backend/: .dockerignore  .gitignore  API.md  Cargo.toml  DOCKER_ONLY.md  DOCKER_SETUP.md  DOCKER_STATUS.md  Dockerfile  INTEGRATION.md  Makefile  QUICKSTART.md  QUICK_START.md  QUICK_START_DOCKER.md  README.md  README_DOCKER.md  SECURITY.md  START.md  SUMMARY.md  TROUBLESHOOTING.md  check_logs.sh  diagnose.sh  docker-compose.yml  fix_database.sh  install_and_start.sh  restart.sh  start.sh  status.sh  stop.sh
backend/.sqlx/: config.json
backend/migrations/: 001_initial.sql  002_calls_and_presence.sql  003_encrypted_content.sql  004_add_username.sql  005_stories.sql  006_channels.sql
backend/scripts/: fix_username_constraint.sql
backend/src/: background.rs  config.rs  database.rs  handlers.rs  main.rs  models.rs  routes.rs  security.rs  services.rs  websocket.rs
ios/: Podfile
lib/: main.dart
linux/: CMakeLists.txt
nginx/: NGINX_SETUP.md  README.md  docker-compose.nginx.yml  nginx.conf  start.sh
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+38 files in other folders)
